# maxine

./: Cargo.toml  flake.nix  rust-toolchain.toml
maxine/: Cargo.toml
maxine-common/: Cargo.toml
maxine-common/src/: lib.rs  readers.rs  scheduler.rs
maxine-dashboard/: Cargo.toml
maxine-dashboard/src/: main.rs
maxine-lib/: Cargo.toml
maxine-lib/benches/: transforms.rs
maxine-lib/src/: lib.rs
maxine-lib/tests/: transforms.rs
maxine/src/: error.rs  main.rs  robot.rs  routines.rs  subsystems.rs
maxine/src/readers/: driverstation.rs  hid.rs  mod.rs  routine.rs
maxine/src/subsystems/: arm.rs  drive.rs  drivetrain.rs  intake.rs  mod.rs  observer.rs
src/: main.rs
