[package]
name = "maxine"
version = "0.1.0"
edition = "2021"

[package.metadata.nix]
build = true

[dependencies.mekena]
git = "https://github.com/bobbbay/mekena"

[dependencies.arfur]
git = "https://github.com/arfur-rs/arfur"

[dependencies.miette]
version = "5.4.1"
features = ["fancy"]

[dependencies.tokio]
version = "1.21.2"
features = ["full"]
