[package]
name = "maxine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
flume = "0.10.14"
maxine-common = { version = "0.1.0", path = "../maxine-common" }
miette = { version = "5.8.0", features = ["fancy"] }
thiserror = "1.0.40"
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
